src/index.scss
@import "./variables";

.rootReactVNB {
  display: none !important;
}

body {
  background-color: $bg-color;
  position: relative;
  margin: 0;
  padding: 0;
}

#root {
  min-height: 100vh;
  display: grid;
  place-items: center;
}

#form-card {
  width: 70%;
  max-width: 800px;
  background-color: $White;
  height:500px;
  margin: 30px;
  padding: 15px;
  border-radius: $bd-radius;
  box-shadow: $bx-shadow;
  display: flex;
  justify-content: space-between;
}

#main-section {
  width: 65%;
  height: 100%;
  border-radius: $bd-radius;
  padding: 5px 70px 5px 20px;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

#content-section {
  width: 100%;
  border-radius: $bd-radius;
  background-color: $White;
  color: $Marine-blue;
  margin: 15px 15px 0;

  .payment-time-frame {
    font-weight: 600;
  }
}

#content-section::-webkit-scrollbar {
  width: 0; /* Hide scrollbar width */
}

.attribution {
  position: absolute;
  bottom: 0;
  padding: 30px 10px 5px;
  color: $Cool-gray;
  font-size: 11px;
}

.attribution > a:hover {
  color: $Marine-blue;
}

.display {
  display: block;
}


// Tablet devices
@media screen and (max-width: 950px) {
  body{
    width: 100vw;  
  }

  #root {
    justify-content: center;
  }

  #form-card {
    background-color: inherit;
    box-shadow: none;
    flex-direction: column;
    min-height: 100vh;
    min-width: 100vw;
    margin: 0;
    padding: 0;
  }

  #main-section {
    width: 100%;
    min-height: 90%;
    padding: 0;
    position: relative;
    margin-bottom: 50px;
  }

  #content-section {
    position: relative;
    top: -45px;
    width: 80%;
    margin: 0 auto;
    z-index: 5;
    padding: 5px 40px 30px;
    box-shadow: 0px 9px 20px -10px rgba(128, 128, 128, 0.541);
    border-radius: 10px;

    p {
      font-size: .8em;
    }

    .selected-plan-price {
      font-size: 15px;
    }

    .selected-addon-price {
        font-size: 12px;
    }
  }

  .attribution {
    display: none;
  }
}


//Mobile screens
@media screen and (max-width: 450px) {
  h2 {
    font-size: 1.2em;
  }

  h3 {
    font-size: 1em;
  }

  #content-section {
    width: 90%;
    padding: 5px 20px 30px;

    p {
      font-size: .7em;
    }

    .selected-plan-price {
      font-size: 13px;
    }

    .selected-addon-price {
        font-size: 10px;
    }
  }
}

